--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-family: 'Amatic SC', cursive;
+    font-weight: bolder;
+    color: #fff;
+    text-shadow: 0px 0px 4px #000;
+    font-size: 20px;
 }
 
 #game-play-area {
@@ -137,5 +142,5 @@ body {
 .win-lose-screen {
     width: 100%;
     margin: auto;
-    
+
 }
